Fix layout bug

--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,7 @@ body {
 .appWrapper {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
 }
 
 /* Navbar */
